; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_message.c_line_length_without_trailing_spaces.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_message.c_line_length_without_trailing_spaces.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i64)* @line_length_without_trailing_spaces to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @line_length_without_trailing_spaces(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8, align 1
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  br label %6

6:                                                ; preds = %19, %2
  %7 = load i64, i64* %4, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %22

9:                                                ; preds = %6
  %10 = load i8*, i8** %3, align 8
  %11 = load i64, i64* %4, align 8
  %12 = sub i64 %11, 1
  %13 = getelementptr inbounds i8, i8* %10, i64 %12
  %14 = load i8, i8* %13, align 1
  store i8 %14, i8* %5, align 1
  %15 = load i8, i8* %5, align 1
  %16 = call i32 @git__isspace(i8 zeroext %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %9
  br label %22

19:                                               ; preds = %9
  %20 = load i64, i64* %4, align 8
  %21 = add i64 %20, -1
  store i64 %21, i64* %4, align 8
  br label %6

22:                                               ; preds = %18, %6
  %23 = load i64, i64* %4, align 8
  ret i64 %23
}

declare dso_local i32 @git__isspace(i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
